--- a/2015/Cargo.toml
+++ b/2015/Cargo.toml
@@ -19,6 +19,9 @@ path = "src/bin/day_03/day_03.rs"
 name = "day_04"
 path = "src/bin/day_04/day_04.rs"
 
+[[bin]]
+name = "day_05"
+path = "src/bin/day_05/day_05.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
