--- a/2015/Cargo.toml
+++ b/2015/Cargo.toml
@@ -31,6 +31,11 @@ path = "src/bin/day_06/day_06.rs"
 name = "day_07"
 path = "src/bin/day_07/day_07.rs"
 
+[[bin]]
+name = "day_08"
+path = "src/bin/day_08/day_08.rs"
+
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
